<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_device"
            android:icon="@drawable/ic_settings_input_antenna_white_48dp"
            android:title="@string/device"/>
        <item
            android:id="@+id/nav_smartlink"
            android:icon="@drawable/ic_wifi_tethering_white_48dp"
            android:title="@string/smartlink"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_white_48dp"
            android:title="@string/settings"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/about"/>
    </group>

</menu>
